# AWS-IoT-MQTT-Fingerprint-Scanner

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  demo_config.h  main.c  mqtt_demo_mutual_auth.c  mqtt_mutual_auth.c  mqtt_mutual_auth.h  mqtt_mutual_auth_config.h  r307.c  r307.h
spiffs/: r307Test.txt
